@@ -298,6 +298,8 @@ Unreleased changes (1.0-dev)
 110. NUTCH-635 -  LinkAnalysis Tool for Nutch. (kubes)
 
 111. NUTCH-646 -  New Indexing Framework for Nutch. (kubes)
+
+112. NUTCH-668 -  Domain URL Filter. (kubes)
      
 Release 0.9 - 2007-04-02
 
